<resources>
    <string name="app_name">ModelDo</string>
    <string name="title_activity_main">Model DO</string>
    <string name="title_home">Home</string>
    <string name="title_book">Book</string>
    <string name="title_calendar">Eventos</string>
    <string name="title_agencia">Agencias</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="stremail">Email</string>
    <string name="descimgver">Editar</string>
    <string name="nombremasc">NOMBRE</string>
    <string name="fechamasc">FECHA</string>
    <string name="horamasc">HORA</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="pagopreg">PAGO?</string>
    <string name="enviopreg">ENVIO?</string>
    <string name="agenciamasc">AGENCIA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="asset_statements">Settings</string>
    <string name="send_to">Enviar</string>
    <string name="error_invalid_password">Enviar</string>
    <string name="error_field_required">Requerido</string>
    <string name="error_incorrect_password">Enviar</string>
    <string name="permission_rationale">Enviar</string>
    <string name="tvtituloAlbum">Albums de Fotos</string>
    <string name="media">Multimedia</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
